examples/docs-examples/spec/1-3-effects-safety/sec_c-b.reml
@pure
fn sum(xs: [i64]) -> i64 = {
  print("x")
  fold(xs, 0, |acc, x| acc + x)
}
// error: @pure 関数で io 効果が検出されました … at print
